--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,7 +131,7 @@
 
                         <div class="swiper-slide">
                             <div class="teachersBox">
-                                <a href="./teachers#1">
+                                <a href="./teachers">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/teachers/muba.png" alt="teachers">
@@ -145,7 +145,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="teachersBox">
-                                <a href="./teachers#2">
+                                <a href="./teachers2">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/teachers/boldbaatar.png" alt="teachers">
@@ -159,7 +159,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="teachersBox">
-                                <a href="./teachers#3">
+                                <a href="./teachers3">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/teachers/anu.png" alt="teachers">
@@ -173,7 +173,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="teachersBox">
-                                <a href="./teachers#4">
+                                <a href="./teachers4">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/teachers/enkhbayr.png" alt="teachers">
@@ -187,7 +187,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="teachersBox">
-                                <a href="./teachers#5">
+                                <a href="./teachers5">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/teachers/batnym.png" alt="teachers">
@@ -201,7 +201,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="teachersBox">
-                                <a href="./teachers#6">
+                                <a href="./teachers">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/Teacher Batnyam.jpeg" alt="teachers">
@@ -214,8 +214,8 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="teachersBox">
-                                <a href="./teachers#7">
+                            <div class="teachersBox2">
+                                <a href="./teachers">
                                     <div class="grayscale"></div>
                                 </a>
                                 <img src="/imgs/Teacher Batnyam.jpeg" alt="teachers">
