--- a/views/teachers2.ejs
+++ b/views/teachers2.ejs
@@ -51,38 +51,36 @@
                         <p>Ахлах багш</p>
                     </div>
                 </div>
+                <div class="containerBottom">
+
+                    <h1>Мэдээлэл</h1>
+                    <div class="line"></div>
+
+                    <p> 2019он Монгол улсын cпортын “Дэд мастер”</p>
+                    <p> 5-н удаагийн ӨААШШТ-ний Аварга, 3-н удаагийн Дэд байр</p>
+                    <p> Насанд хүрэгчдийн ААШШТ-ний Аварга, Дэд байр</p>
+                    <p> ӨУАШШТ-ний шагналт 5,6-р байр</p>
+                    <p> 2019 он Хүүхдийн спортын Их наадамд 5-р байр</p>
+                    <p> Булган 2011 бүсийн тэмцээний аварга</p>
+                    <p> 2016 он Төвийн бүсийн аварга Эрдэнэт хот</p>
+                    <p> 2013он SriLanka улсад зохиогдсон Азийн аваргад 10-р байранд амжилттай оролцсон.</p>
+
+
+                    <h1>Ажлын туршлага</h1>
+                    <div class="line"></div>
+                    <p> Стейниц МША-ийг үүсгэн байгуулагдсан цагаас эхлэн анхан шатаас ахисан шатад зааж сургаж туршлагажсан.</p>
+                    <p> 10-н жилийн сургууль болон цэцэрлэгт гэрээт багшаар ажилласан ба цэцэрлэгийн өмнөх насны хүүхдэд шатрын боловсрол олгох чадвар өндөр.</p>
+
+                </div>
+
             </div>
-            <div class="containerBottom">
-
-                <h1>Мэдээлэл</h1>
-                <div class="line"></div>
-
-                <p> Аймгийн аварга шалгаруулах өсвөрийн шатрын тэмцээний 7 удаагийн босоо аварга. /Говь-Алтай аймаг/</p>
-                <p> Өсвөрийн шатарчдын улсын аварга шалгаруулах өсвөрийн хамгийн том тэмцээнд 4-р байр</p>
-                <p> Монголын хүүхдийн ордны нэрэмжит “Цодгор хүү” ӨАШШТ шагналт 2-р байр.</p>
-                <p> Өсвөрийн улсын аварга шалгаруулах шатрын түргэвчилсэн төрөлд шагналт 3-р байр.</p>
-                <p> Улсын чанартай Монгол хүн сансарт ниссэний нэрэмжит Ирээдүйн одод ӨАШШТ 2-р байр, 4-р байр</p>
-                <p> Оюуны эрэлд 1200 хүүхдийн шатрын наадам 2015 он 1-р байр алтан медаль.</p>
-                <p> Аймгийн аварга шалгаруулах насанд хүрэгчидийн аварга шалгаруулах шатрын тэмцээн 2-р байр</p>
-
-
-                <h1>Ажлын туршлага</h1>
-                <div class="line"></div>
-                <p>Стейниц МША-ийн 2021 оны зуны эрчимжүүлсэн 50 хүүхдийн сургалтыг удирдан багшилсан.</p>
-
-            </div>
-
-
-
 
         </div>
-
     </section>
-    <%-  include('partials/footer') %>
 
 
-        <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js "></script>
-        <script src="./js/swiper.js "></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js "></script>
+    <script src="./js/swiper.js "></script>
 
 </body>
 
