--- a/public/css/teachers.css
+++ b/public/css/teachers.css
@@ -30,9 +30,10 @@ body {
 .navigation {
     display: flex;
     align-items: center;
-    position: absolute;
-    width: 100%;
-    padding: 0 10%;
+    position: sticky;
+    width: 80%;
+    padding: 0 5%;
+    background-color: black;
 }
 
 @media screen and (max-width:600px) {
@@ -144,132 +145,64 @@ a {
     width: 100%;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@100;300;400;500;600;700;800&display=swap');
+.container {
+    width: 100%;
+    color: white;
+    height: 80vh;
+}
+
 body {
-    margin: 0px;
-    padding: 0px;
-    background-image: url('/imgs/CompressedImg/backback.jpg');
-    background-size: cover;
-    font: var(--bodyfont);
-    color: var(--gray);
-    letter-spacing: 1px;
-    --white: rgba(245, 244, 240, 1);
-    --beige: rgba(231, 228, 218, 1);
-    --gray: #5B5348;
-    --mauve: rgba(96, 77, 83, 1);
-    --mauve50: rgba(96, 77, 83, .5);
-    --sans: 'Be Vietnam';
-    --bodyfont: 400 11px/18px var(--sans);
+    background-color: black;
 }
 
-.teacherContainer {
-    width: calc(90% - 100px);
-    width: 1000px;
-    margin: 50px auto;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    display: grid;
-    grid-gap: 0px;
-    grid-template-columns: 300px auto;
-    grid-template-rows: auto auto;
-    grid-template-areas: 'mini post' 'mini btns';
-    padding-top: 10%;
-    font-size: 14px;
+.grayscale {
+    background-image: linear-gradient(rgba(255, 255, 255, 0), black);
+    border-radius: 0;
 }
 
-.teacherContainer .teacherContainerLeft {
-    grid-area: mini;
-    width: 200px;
-    text-align: center;
-    overflow: hidden;
-    padding: 50px;
-    background-color: var(--white);
-    -border-radius: 140px 0px 0px 15px;
-    -webkit-border-radius: 140px 0px 0px 15px;
-    transition: border-radius 1.2s .3s, -webkit-border-radius 1.2s .3s;
-}
-
-.teacherContainer .teacherContainerLeft .circle {
-    width: 200px;
-    height: 200px;
-    margin: 0px auto 90px auto;
-    position: relative;
-    border-radius: 100%;
-    webkit-border-radius: 100%;
-    background-image: url('/imgs/blackBack.jpg');
-}
-
-.teacherContainer .teacherContainerLeft .circle .imageback {
-    border: 3px solid var(--white);
-    width: 194px;
-    height: 194px;
-    position: absolute;
-    top: 50px;
-    left: 0px;
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
-    transition: border .9s .3s, top 1.1s .3s;
-}
-
-.teacherContainer .teacherContainerLeft:hover .circle .imageback {
-    border: 0px solid var(--white);
-    top: 0px;
-    transition: border .5s, top .8s;
-}
-
-.teacherContainer .teacherContainerLeft .circle .imageback .image {
-    width: 194px;
-    height: 194px;
-    border-radius: 100%;
-    webkit-border-radius: 100%;
-    filter: grayscale(30%) contrast(95%) sepia(0%);
-    transition: width 1.1s .3s, height 1.1s .3s, border-radius 1.7s .3s, -webkit-border-radius 1.7s .3s;
-}
-
-.teacherContainer .teacherContainerLeft .circle .imageback .image img {
-    width: 100%
-}
-
-.teacherContainer .teacherContainerLeft:hover .circle .imageback .image {
-    width: 200px;
-    height: 275px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    transition: width .8s, height .8s, border-radius .7s, -webkit-border-radius .7s;
-}
-
-.teacherContainer .teacherContainerLeft .name {
-    width: 200px;
-    margin: 0px auto 20px auto;
-    font: 700 18px/18px var(--sans);
-    text-transform: uppercase;
-    word-spacing: 1000px;
-    letter-spacing: 3px;
-    color: var(--mauve);
-}
-
-.teacherContainer .teacherContainerLeft .name:first-line {
-    font: 100 20px/30px var(--sans);
-    color: var(--gray);
-}
-
-.teacherContainer .teacherContainerLeft .details {
-    padding: 0px 15px;
-    font: 300 8px/12px var(--sans);
-    text-transform: uppercase;
-    letter-spacing: 2px;
+.containerTop {
+    background-image: url('/imgs/teachers/teachersback.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
     display: flex;
-    flex-flow: row nowrap;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 80vh;
 }
 
-.teacherContainer .teacherContainerRight {
-    grid-area: post;
-    width: calc(100% - 50px);
-    min-height: 400px;
-    padding: 50px 50px 50px 0px;
-    background-color: var(--white);
-    border-radius: 0px 15px 0px 0px;
-    -webkit-border-radius: 0px 15px 0px 0px;
+.containerTop img {
+    width: 45%;
+}
+
+.containerTopText {
+    z-index: 1;
+    text-align: center;
+    margin-top: -20%;
+    height: 50vh;
+}
+
+.containerTopText h1 {
+    font-size: 56px;
+    font-weight: bold;
+}
+
+.containerBottom {
+    width: 65%;
+    margin: 5% auto;
+    line-height: 1.5;
+    color: white;
+}
+
+.containerBottom h1 {
+    margin: 2% 0;
+}
+
+.containerBottom .line {
+    text-align: left;
+    margin: 0;
+    width: 11%;
+    margin: 2% 0;
 }
