--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="./css/swiper.css">
 <link rel="stylesheet" href="./css/modal.css">
 <link rel="stylesheet" href="./css/textwriter.css">
+<link rel="stylesheet" href="./css/footer.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap" rel="stylesheet">
